<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.android.alissonranielsousa.sinewsapp.MainActivity"
    tools:showIn="@layout/activity_main">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/imageView"
            android:src="@mipmap/banner" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/scrollView4" >

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:layout_height="412dp">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:id="@+id/news1"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="5dp"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:text="@string/title1"
                        android:id="@+id/textView3"
                        android:textStyle="bold"
                        android:textSize="18dp" />

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" >

                        <ImageButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/imageButton2"
                            android:src="@mipmap/jsday" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:text="@string/news1"
                            android:id="@+id/textView4"
                            android:textSize="15dp"
                            android:layout_marginTop="10dp" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:paddingTop="7dp"
                    android:layout_height="wrap_content"
                    android:background="@color/button_material_light"
                    android:id="@+id/news2">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="5dp"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:text="@string/title2"
                        android:id="@+id/textView5"
                        android:textStyle="bold"
                        android:textSize="18dp" />

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" >

                        <ImageButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/imageButton3"
                            android:src="@mipmap/new2" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:text="@string/news2"
                            android:id="@+id/textView6"
                            android:textSize="15dp"
                            android:layout_marginTop="10dp" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:paddingTop="7dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/news3">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="5dp"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:text="@string/title3"
                        android:id="@+id/textView2"
                        android:textStyle="bold"
                        android:textSize="18dp" />

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <ImageButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/imageButton6"
                            android:src="@mipmap/new3" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:text="@string/news3"
                            android:id="@+id/textView9"
                            android:textSize="15dp"
                            android:layout_marginTop="10dp" />
                    </LinearLayout>
                </LinearLayout>


            </LinearLayout>
        </ScrollView>
    </LinearLayout>


</RelativeLayout>
